--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
-    background-color: rgb(233, 228, 228);
+    background-color: rgb(107, 97, 97);
+}
+
+.geralzao{
+    width: 94vw;
+    margin: 0px 0px 0px 3rem;
 }
 
 .cabecalho_principal{
@@ -31,11 +35,19 @@ body{
     justify-content: space-around;
     align-items: center;
     list-style: none;
+    font-family: 'Trebuchet MS';
 }
 
 .cabecalho_secundario ul :hover{
     cursor: pointer;
 }
+
+.historico{
+    color: black;
+    text-decoration: none;
+}
+
+
 
 /* <!-- ==============================Página Principal========================================== --> */
 
@@ -53,12 +65,14 @@ body{
 .prod_mod{
     border: 1px solid black;
     font-size: 1.3rem;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: rgb(233, 228, 228);
 }
 
 .select1{
     border: 1px solid black;
     padding: 5px;
-     background-color: #ccc;
+    background-color: #ccc;
 }
 
 .select2{
@@ -70,6 +84,7 @@ body{
 .caminho{
     border: 1px solid black;
     font-size: 1.3rem;
+    background-color: rgb(233, 228, 228);
 }
 
 .vencimento{
